feat(multiagent): 新增主从式多智能体框架及专家角色升级